Grace/tests/gibbs/errors/t175.grace
// ERROR = L0011
print "Hello 
    ++ "world"
